Closed Bug 490468 Opened 16 years ago Closed 16 years ago

Tidy up some leaks in mailnews tests

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: standard8, Assigned: standard8)

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
I've been playing around a bit with our unit tests and just seeing what leaks we are getting. I noticed that our imap tests were quite leaky especially wrt the protocol. It turns out that we are currently typically calling closeCachedConnections from the onStopRequest of a urlListener. Unfortunately this means we're still in the middle of a connection, and hence the connection doesn't get tidied up correctly. The simple fix is to close the cached connections after a short timeout. Note: this isn't the code that is leaking, just our unit test methods causing it to leak. Even after this fix (and the one from bug 438922) we aren't free of reported leaks (e.g. rdf service/resources, other random happenings). However it still helps to clear up the picture a bit. I've also removed one function: nsImapServerResponseParser::GetHostSessionList its not used and probably would have leaked had anyone tried to use it (return type should have been already_AddRefed<nsIImapHostSessionList>).
Attachment #374908 - Flags: superreview?(bienvenu)
Attachment #374908 - Flags: review?(bienvenu)
Attachment #374908 - Flags: superreview?(bienvenu)
Attachment #374908 - Flags: superreview+
Attachment #374908 - Flags: review?(bienvenu)
Attachment #374908 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: