Bug 490468 Tidy up some leaks in mailnews unit tests. r/sr=bienvenu